--- a/src/components/Answers/Answers.css
+++ b/src/components/Answers/Answers.css
@@ -62,3 +62,8 @@
   font-size: 16px;
   margin: 10px 0;
 }
+@media only screen and (max-width: 600px) {
+  .chingu-question {
+    font-size: 16px;
+  }
+}
